<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/showProfileFragment"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/itemListFragment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_advertisements"/>
        <item
            android:id="@+id/onSaleListFragment"
            android:icon="@drawable/ic_event_available_24dp"
            android:title="@string/menu_on_sale"/>
        <item
            android:id="@+id/itemsOfInterestListFragment"
            android:icon="@drawable/ic_favorite_border_white_24dp"
            android:title="@string/items_of_interest_list" />
        <item
            android:id="@+id/boughtItemsListFragment"
            android:icon="@drawable/ic_menu_sale"
            android:title="@string/bought_items_list"/>
    </group>
</menu>
