<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navProfile">

    <fragment
        android:id="@+id/nav_home_second"
        android:name="it.polito.mad.project.activities.main.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_ProfileFragment"
            app:destination="@id/navProfile" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navProfile"
        android:name="it.polito.mad.project.activities.main.ui.profile.ShowProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navProfile_to_nav_home_second"
            app:destination="@id/nav_home_second" />
    </fragment>

    <fragment
        android:id="@+id/navAdvertisements"
        android:name="it.polito.mad.project.activities.main.ui.advertisements.ListAdvertisementFragment"
        android:label="@string/menu_advertisements"
        tools:layout="@layout/fragment_list_advertisement" >
        <action
            android:id="@+id/action_navAdvertisements_to_editItemFragment"
            app:destination="@id/editItemFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit" />
    </fragment>
    <fragment
        android:id="@+id/editItemFragment"
        android:name="it.polito.mad.project.activities.main.ui.advertisements.ShowItemFragment"
        android:label="@string/menu_show_advertisement"
        tools:layout="@layout/fragment_show_advertisement">
        <action
            android:id="@+id/action_editItemFragment_to_navAdvertisements"
            app:destination="@id/navAdvertisements"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit" />
    </fragment>
</navigation>